--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,10 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.result-box{
+  height: 50px;
+  width: 250px;
+  margin: 0 auto;
+  border: 1px solid black;
+}
