--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
-.App {
+.App{
   text-align: center;
+}
+
+.Body{
+  background-color: #D3D3D3;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 30px;
+}
+
+.Body div{
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-logo {
@@ -7,9 +20,9 @@
   height: 80px;
 }
 
-.App-header {
+.App-header, footer {
   background-color: #222;
-  height: 150px;
+  height: 80px;
   padding: 20px;
   color: white;
 }
@@ -23,19 +36,26 @@
   to { transform: rotate(360deg); }
 }
 
-#form{
-  display: flex;
-  flex-direction: column;
+input, textarea{
+  width: 100%;
+  font-size: 1.3em;
 }
 
-#form div{
-  margin-top: 10px;
-  margin-bottom: 10px;
+button{
+  font-size: 1.3em;
+  padding: 7px;
+  border-radius: 4px;
+  background-color: gray;
 }
 
 .result-box{
   height: 50px;
   width: 250px;
-  margin: 0 auto;
-  border: 1px solid black;
+  background-color: white;  
+  border: 4px solid red;
+  border-radius: 5px;
+}
+
+footer{
+  padding-top: 80px;
 }
